src/test/ui/type-alias-impl-trait/issue-52843-closure-constrain.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/issue-52843-closure-constrain.rs:13:22
   |
LL |     let null = || -> Opaque { 0 };
   |                      ^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
